<resources>
    <string name="app_name">畅游兴安</string>
    <string name="down_item_tip">正下载新版本</string>
    <string name="watting_tip">努力加载中&#8230;</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_informati">资讯</string>
    <string name="main_tab_booking">服务</string>
    <string name="main_tab_interaction">互动</string>
    <string name="main_tab_persCenter">我的</string>
    <string name="main_top_search_tip">输入酒店、美食、玩乐、购物</string>
    <string name="login_title">登陆</string>
    <string name="login_head_desc">头像</string>
    <string name="login_mobile_tip">请输入您的手机号</string>
    <string name="login_password_tip">请输入密码</string>
    <string name="remember_me">记住密码</string>
    <string name="forget_Password">忘记密码?</string>
    <string name="login_submit">登录</string>
    <string name="login_register">注册</string>
    <string name="main_top_search_text">搜索</string>
    <!-- 二维码 -->
    <string name="zxing_msg">将二维码放入框内，即可自动扫描</string>
    
    <!-- 本地测试  -->
    <!-- <string name="baseUrl">http://192.168.31.123:8080/travel/</string>
    <string name="hostUrl">http://192.168.31.123:8080/</string>
    <string name="imageUrl">http://192.168.31.123:8080/travel/</string> -->

    <!-- 服务器地址 -->
    <string name="baseUrl">https://travel.gxucreate.com/xingan/</string>
    <string name="hostUrl">https://travel.gxucreate.com/</string>
    <string name="imageUrl">https://travel.gxucreate.com/xingan/</string>


    <string name="loginUrl">app/login.do</string>
    
    <string name="autoLoginUrl">app/autoLogin.do</string>

    <string name="verUrl">verson.txt</string>
</resources>
