<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px70"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:background="#c8c7cc" />

        <RadioGroup
            android:id="@+id/radioGroup_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal" >

            <!-- 首页 -->

            <RadioButton
                android:id="@+id/radioButton_home"
                style="@style/main_tab_style"
                android:drawableTop="@drawable/n1"
                android:text="@string/main_tab_home" />
            <!-- 服务-->
            <RadioButton
                android:id="@+id/radioButton_booking"
                style="@style/main_tab_style"
                android:drawableTop="@drawable/n2"
                android:text="@string/main_tab_booking" />
            <!-- 个人中心 -->
            <RadioButton
                android:id="@+id/radioButton_persCenter"
                style="@style/main_tab_style"
                android:drawableTop="@drawable/n3"
                android:text="@string/main_tab_persCenter" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>